[package]
name = "rust-arduino-power"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cortex-m = "0.7"
usbd-serial = "0.1"
panic-halt = "0.2"
panic-semihosting = "0.5"

[dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
arduino_nano33iot = { git = "https://github.com/atsamd-rs/atsamd" }
